# yolo-wasm-yew

./: Cargo.toml  README.md  index.html
src/: agents.rs  config.rs  contexts.rs  io.rs  lib.rs  main.rs  store.rs  utils.rs
src/components/: inference_webcam_component.rs  mod.rs  webcam_component.rs
src/components/logos/: github_logo.rs  linkedin_logo.rs  mod.rs  yewlogo.rs
