[package]
name = "yolo-wasm-yew"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js-sys = "0.3.69"
stylist = "0.13.0"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
web-sys = { version = "0.3.69", features = [
    "MediaStream",
    "HtmlVideoElement",
    "HtmlMediaElement",
    "MediaDevices",
    "Window",
    "Navigator",
    "MediaStreamConstraints",
    "MediaTrackConstraints",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "HtmlButtonElement",
] }
yew = { version = "0.21.0", features = ["csr"] }
