[package]
name = "yolo-wasm-yew"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js-sys = "0.3.69"
serde = { version = "1.0.197", features = ["derive"] }
stylist = { version = "0.13.0", features = ["yew", "macros"] }
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
web-sys = { version = "0.3.69", features = [
    "MediaStream",
    "HtmlVideoElement",
    "HtmlMediaElement",
    "MediaDevices",
    "Window",
    "Navigator",
    "MediaStreamConstraints",
    "MediaTrackConstraints",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "HtmlButtonElement",
] }
yew = { version = "0.21.0", features = ["csr"] }
yew-agent = "0.3.0"
image = "0.24.8"
imageproc = "0.23.0"
rusttype = "0.9.3"
candle-core = "0.4.1"
candle-nn = "0.4.1"
base64 = "0.22.0"
